TODO: visualSFM model

--- a/index.html
+++ b/index.html
@@ -1,31 +1,21 @@
 <!doctype html>
 <html>
 <head>
-    <title>SFM Data Viewer</title>
+    <title>SFM Viewer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta original_author="yuyou">
     <meta original_source="https://gist.github.com/yuyou/2665238329ca34f0288b073d735a7bcb">
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <!--
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r84/three.min.js"></script>
-    -->
-    <script src="three.js"></script>
-    <!-- https://github.com/mrdoob/stats.js -->
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
-    <script src="http://threejs.org/examples/js/Detector.js"></script>
-    <script src="https://stemkoski.github.io/Three.js/js/THREEx.WindowResize.js"></script>
-    <script src="http://threejs.org/examples/js/controls/TrackballControls.js"></script>
     <style>
         body {
             color: #ffffff;
-            font-family:Monospace;
-            font-size:13px;
-            text-align:center;
+            font-family: Monospace;
+            font-size: 13px;
+            text-align: center;
             font-weight: bold;
-
             background-color: #000000;
             margin: 0px;
+            padding: 0px;
             overflow: hidden;
         }
         #info {
@@ -33,7 +23,6 @@
             position: absolute;
             top: 0px; width: 100%;
             padding: 5px;
-
         }
         a {
             color: red;
@@ -41,44 +30,84 @@
     </style>
 </head>
 <body>
-<a href="https://github.com/district10/sfmViewer">
-    <img
-        style="position: absolute; top: 0; right: 0; border: 0; width: 149px; height: 149px;"
-        src="fork-me-on-github.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/district10/sfmViewer"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
 <div id="container"></div>
 <div id="info">
-    <a href="https://github.com/openMVG/openMVG" target="_blank">OpenMVG</a> sfm_data.json viewer (drag here to load)
+    sfm data viewer, for OpenMVG, VisualSFM, etc
 </div>
+
+<!--
+<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+<script src="http://threejs.org/examples/js/Detector.js"></script>
+<script src="https://stemkoski.github.io/Three.js/js/THREEx.WindowResize.js"></script>
+<script src="http://threejs.org/examples/js/controls/TrackballControls.js"></script>
+-->
+<script src="jquery-3.1.0.min.js"></script>
+<script src="three.js"></script>
+<script src="stats.min.js"></script>
+<script src="Detector.js"></script>
+<script src="THREEx.WindowResize.js"></script>
+<script src="TrackballControls.js"></script>
+<script src="dat.gui.js"></script>
 <script>
     'use strict';
 
-    var load_image = true; // if true, original images must exist at the same folder, otherwise a colored plain is used
-    var scaling = 1.0;
-    var point_size = 0.01;
-    var camera_size = 0.2;
+    var load_image = true;
     var sfm_data;
     var stats, scene, renderer;
-    var camera, cameraControls;
+    var light, camera, axisHelper;
+    var cameraControls;
+    var cameraFrustums = [], particles;
+
+    var Config = function() {
+        this.pointColor = [255, 255, 255];
+        this.pointSize = 0.01;
+        this.cameraFrustumScale = 1;
+        this.model = 'sfm_data.json';
+        this.loadModel = function() {
+            alert("TODO load model here.");
+        }
+    };
+    var config = new Config();
+    var gui = new dat.GUI();
+    gui.add(config, 'model', { OpenMVG: "sfm_data.json", TODO_VisualSFM: "todo_url" } ).onChange(function(value){
+        console.log(value);
+    }).name("Models");
+    // gui.add(config, 'loadModel').name("Load Your Own Model File");
+    gui.add(config, 'cameraFrustumScale').min(0.1).max(5).step(0.1).onChange(function(value) {
+        for (var i = 0; i < cameraFrustums.length; i++) {
+            cameraFrustums[i].scale.set(value, value, value);
+        }
+    }).name("Camera Scale");
+    var f1 = gui.addFolder('Point Cloud'); f1.open();
+    f1.add(config, 'pointSize').min(0.01).max(0.05).step(0.005).onChange(function(value) {
+        particles.material.size = value;
+    }).name("Size");
+    f1.addColor(config, 'pointColor').onFinishChange(function(value){
+        particles.material.color = [value[0]/255.0, value[1]/255.0, value[2]/255.0];
+    }).name("Color");
 
     $( document ).ready(function() {
-        console.log( "openMVG sfm_data.json Viewer!" );
-        load_sfm( 'sfm_data.json' ); if( !init() )  { animate(); }
+        // console.log( "openMVG sfm_data.json Viewer!" );
+        if( !init() )  { animate(); }
+        load_sfm( config.model );
     });
 
     function load_sfm(url){
         $.getJSON(url, function(obj) {
-            sfm_data = obj; //.views;
-            console.log("View counts:", sfm_data.views.length);
+            sfm_data = obj;
+            init_scene();
             create_camerapose_geometries();
             create_pointcloud_geometry();
         });
-
     }
 
     function _create_camera_geometry(key_id){
 
-        var geometry1 = new THREE.PlaneGeometry( camera_size, camera_size );
-        var geometry2 = new THREE.PlaneGeometry( camera_size, camera_size );
+        var geometry1 = new THREE.PlaneGeometry( 0.2, 0.2 );
+        var geometry2 = new THREE.PlaneGeometry( 0.2, 0.2 );
         geometry2.applyMatrix( new THREE.Matrix4().makeRotationY( Math.PI ) );
         geometry2.applyMatrix( new THREE.Matrix4().makeRotationZ( Math.PI ) );
 
@@ -112,6 +141,14 @@
         return card;
     }
 
+    function init_scene() {
+        scene.children = [];
+        cameraFrustums = [];
+        scene.add(camera);
+        scene.add(light);
+        scene.add(axisHelper);
+    }
+
     function create_camerapose_geometries(){
 
         var camera_count = sfm_data.extrinsics.length;
@@ -119,7 +156,7 @@
 
             var plane = _create_camera_geometry(i);
             var center = sfm_data.extrinsics[i].value.center;
-            plane.position.set(center[0]*scaling, center[1]*scaling, center[2]*scaling);
+            plane.position.set(center[0], center[1], center[2]);
             var rotation = sfm_data.extrinsics[i].value.rotation;
             var rotationMatrix = new THREE.Matrix4();
             rotationMatrix.set(
@@ -128,8 +165,10 @@
                 rotation[0][2], rotation[1][2], rotation[2][2],     0,
                              0,              0,              0,     1 );
             plane.quaternion.setFromRotationMatrix(rotationMatrix);
-            scene.add(plane);
+            plane.isCameraFrustum = true;
 
+            scene.add(plane);
+            cameraFrustums.push(plane);
         }
     }
 
@@ -143,13 +182,14 @@
             var vertex = new THREE.Vector3(p[0],p[1],p[2]);
             geometry.vertices.push(vertex);
         }
+
         var material = new THREE.PointsMaterial({
             color: [1, 1, 1],
-            size: point_size
+            size: 0.01
         });
-        var particles = new THREE.Points(geometry, material);
+        particles = new THREE.Points(geometry, material);
+        particles.isParticles = true;
         scene.add(particles);
-
     }
 
     // init the scene
@@ -167,12 +207,19 @@
         }
         renderer.setClearColor( 0x000000 );
         renderer.setSize( window.innerWidth, window.innerHeight );
-        document.getElementById('container').appendChild(renderer.domElement);
+        var container = document.getElementById('container');
+        container.appendChild(renderer.domElement);
+        if (container.children.length > 1) {
+            container.removeChild(container.children[0]);
+        }
 
         // add Stats.js - https://github.com/mrdoob/stats.js
         stats = new Stats();
-        stats.domElement.style.position   = 'absolute';
+        stats.domElement.style.position = 'absolute';
+        stats.domElement.style.top = ""
         stats.domElement.style.bottom = '0px';
+        stats.domElement.style.left = ""
+        stats.domElement.style.right = '0px';
         document.body.appendChild( stats.domElement );
 
         // create a scene
@@ -182,7 +229,6 @@
         camera.position.set(0, -1, -1);
         camera.up.y = -150;
         // camera.applyMatrix( new THREE.Matrix4().makeRotationZ( Math.PI ) );
-        scene.add(camera);
 
         // create a camera contol
         cameraControls    = new THREE.TrackballControls( camera, document.getElementById('container') )
@@ -190,26 +236,8 @@
         // transparently support window resize
         THREEx.WindowResize.bind(renderer, camera);
 
-        var light = new THREE.AmbientLight( 0.3 * 0xffffff );
-        scene.add( light );
-        /*
-         var light = new THREE.DirectionalLight( Math.random() * 0xffffff );
-         light.position.set( Math.random(), Math.random(), Math.random() ).normalize();
-         scene.add( light );
-         var light = new THREE.DirectionalLight( Math.random() * 0xffffff );
-         light.position.set( Math.random(), Math.random(), Math.random() ).normalize();
-         scene.add( light );
-         var light = new THREE.PointLight( Math.random() * 0xffffff );
-         light.position.set( Math.random()-0.5, Math.random()-0.5, Math.random()-0.5 )
-         .normalize().multiplyScalar(1.2);
-         scene.add( light );
-         var light = new THREE.PointLight( Math.random() * 0xffffff );
-         light.position.set( Math.random()-0.5, Math.random()-0.5, Math.random()-0.5 )
-         .normalize().multiplyScalar(1.2);
-         scene.add( light );
-         */
-        var axisHelper = new THREE.AxisHelper(500);
-        scene.add(axisHelper);
+        light = new THREE.AmbientLight( 0.3 * 0xffffff );
+        axisHelper = new THREE.AxisHelper(500);
 
     }
 
@@ -248,13 +276,12 @@
         var reader = new FileReader();
         reader.addEventListener( 'load', function ( event ) {
             sfm_data = JSON.parse(event.target.result);
+            init_scene();
             create_camerapose_geometries();
             create_pointcloud_geometry();
         }, false );
         reader.readAsText ( event.dataTransfer.files[ 0 ] );
-        if( !init() )  {
-            animate();
-        }
+        if( !init() )  { animate(); }
         document.body.style.opacity = 1;
     }, false );
 
